# lp-0002-private-multisig

./: .gitignore  .gitlab-ci.yml  BUGS_FILED.md  Cargo.toml  LICENSE  README.md  demo.sh  flake.nix  metadata.json  module.json  scaffold.toml
.github/workflows/: ci.yml
basecamp-app/: CMakeLists.txt  README.md  app.js  index.html  metadata.json  resources.qrc  styles.css
basecamp-app/qml/: Lp0002PrivateMultisig.qml
basecamp-app/src/: lp0002_backend.cpp  lp0002_backend.h  lp0002_plugin.cpp  lp0002_plugin.h  lp0002_widget.cpp  lp0002_widget.h
consumer-demo/: Cargo.toml
consumer-demo/examples/: bench.rs
consumer-demo/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: guest_relation.rs  threshold_relation.rs
docs/: CONSUMER_INTEGRATION.md  DEMO_VIDEO_SCRIPT.md  FINAL_DEMO_TRANSCRIPT.md  HEAVY_LANE_ROADMAP.md  PROTOCOL.md  SPEC_COMPLIANCE.md
host/: Cargo.toml
host/src/: lib.rs
host/tests/: host_boundary.rs
interfaces/: compute_discriminators.py  lp0002.idl.json  lp0002.spel
lez-program/: Cargo.toml
lez-program/src/: lib.rs
lez-program/tests/: execute_proposal.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
scripts/: benchmark-lez-costs.py  ci-verify-testnet.py  demo-heavy-lane.sh  demo-video.sh  final-publication-check.py  lez-localnet-smoke.sh  narrate-demo.sh  record-final-video.sh  render-narrated-demo.py  render_slideshow_with_audio.swift  run-risc0-fixture-m4.sh  validate-basecamp-native.sh  validate-submission-readiness.py
sdk/: Cargo.toml
sdk/src/: lib.rs
solutions/: LP-0002.md
submission/: BASECAMP_INSTALL_EVIDENCE.json  BASECAMP_NATIVE_BUILD.md  BASECAMP_RUNTIME_LOAD_EVIDENCE.json  BENCHMARKS.md  CI_EVIDENCE.md  EVALUATOR_GUIDE.md  FINAL_PUBLICATION_AUDIT.md  LEZ_COST_BENCHMARKS.json  MAINTAINER_CLARIFICATION.md  PR_DRAFT.md  TESTNET_EVIDENCE.json
submission/proof-artifacts/lp0002-risc0-fixture-new/: journal.borsh  lez-execution.json  manifest.txt  nssa-deploy-evidence.json  nssa-submit-dry-run.json  nssa-submit-evidence.json  receipt.borsh  spel-adapter-evidence.json
submission/proof-artifacts/lp0002-v020-current/: current-testnet-refresh-summary.json
verifier-program/: Cargo.toml
verifier-program/src/: lib.rs
verifier-program/tests/: program.rs
