[workspace]
members = [
    "core",
    "verifier-program",
    "consumer-demo",
    "sdk",
    "methods",
    "methods/guest",
    "host",
    "lez-program",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
publish = false

[workspace.dependencies]
anyhow = "1"
borsh = { version = "1", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
