[package]
name = "lp0002-consumer-demo"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
serde_json.workspace = true
lp0002-private-multisig-core = { path = "../core" }
lp0002-private-multisig-verifier = { path = "../verifier-program" }
lp0002-private-multisig-sdk = { path = "../sdk" }
