[package]
name = "lp0002-private-multisig-core"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
borsh.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
