[package]
name = "lp0002-private-multisig-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
hex.workspace = true
lp0002-private-multisig-core = { path = "../core" }
lp0002-private-multisig-lez-program = { path = "../lez-program" }
lp0002-private-multisig-methods = { path = "../methods" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
