[package]
name = "lp0002-private-multisig-lez-program"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
borsh.workspace = true
hex.workspace = true
lp0002-private-multisig-core = { path = "../core" }
lp0002-private-multisig-verifier = { path = "../verifier-program" }
serde.workspace = true
thiserror.workspace = true
